# esp32s3-face-detect-c

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
main/: CMakeLists.txt  camera.c  camera.h  config.h  config_private.h.example  device_ctrl.c  device_ctrl.h  display.c  display.h  face_detect.c  face_detect.cpp  face_detect.h  http_stream.c  http_stream.h  idf_component.yml  main.c  mqtt_comm.c  mqtt_comm.h  voice_client.c  voice_client.h  voice_i2s.c  voice_i2s.h  voice_task.c  voice_task.h
main/models/: README.md
miniapp/: README.md  app.js  app.json  app.wxss  project.config.json  project.config.json.example  project.private.config.json  sitemap.json
miniapp/pages/control/: control.js  control.json  control.wxml  control.wxss
miniapp/pages/detections/: detections.js  detections.json  detections.wxml  detections.wxss
miniapp/pages/faces/: faces.js  faces.json  faces.wxml  faces.wxss
miniapp/pages/home/: home.js  home.json  home.wxml  home.wxss
miniapp/utils/: api.js  config.example.js  format.js
web/: .env.example  README.md  app.py  requirements.txt  start.sh  video_relay.py
web/templates/: index.html
